--- a/header.html
+++ b/header.html
@@ -148,7 +148,7 @@
         <li><a href="./index.html" data-key="navHome">Home</a></li>
         <li><a href="./index.html#services" data-key="navServices">Services</a></li>
         <li><a href="./about.html" data-key="navAbout">About</a></li>
-        <li><a href="./contact.html#contact" data-key="navContact">Contact</a></li>
+        <li><a href="./contact.html" data-key="navContact">Contact</a></li>
       </ul>
     </nav>
 
