--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="/Seika-education/banner-2.webp" alt="Seika Education Consultancy Reception Area" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
+          <img src="/Seika-education/banner-2.png" alt="Seika Education Consultancy Reception Area" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
         </div>
         <div class="swiper-slide">
           <img src="/Seika-education/banner-5.webp" alt="Study & Work in Japan Banner" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
